Gnome 43: Fix double borders in context menus

--- a/gtk-4.0/widgets/_menus.scss
+++ b/gtk-4.0/widgets/_menus.scss
@@ -29,7 +29,7 @@ menu,
   margin: 4px;
   padding: 2px 0px;
   background: $main_dark_color;
-  border: 1px solid $borders_color; // adds borders in a non composited env
+  border: none; // adds borders in a non composited env
   border-radius: 5px;
   font: initial;
 
